Fixed layout of index page, text wrapping the picture

--- a/assets/style.css
+++ b/assets/style.css
@@ -48,7 +48,11 @@ body {
     border-bottom: 1px solid teal;
 }
 
-
+#profile-pic {
+  width: 100%;
+  max-width: 250px;
+  height: auto;
+}
 
 /* Top navigation */
 
